--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -1,30 +1,50 @@
 ---
 resources:
-- name: attendee-service
+- name: attendee-service-source
   type: git
   source:
-    uri: https://github.com/YOUR_GITHUB_USER_NAME/pcf-attendee-service-code   #<----- REPLACE ME
-    branch: concourse_deployment
+    uri: https://github.com/sumit-chakraborty/pcf-attendee-service-code  #<---- REPLACE ME
+    branch: master
 
 - name: deploy-attendee-service
   type: cf
   source:
-    api: YOUR_PCF_API_ENDPOINT        #<----- REPLACE ME
+    api: https://api.system.cumuluslabs.io        #<---- REPLACE ME
     username: {{cf-user}}
     password: {{cf-password}}
-    organization: YOUR_CI_USER_ORG    #<----- REPLACE ME
-    space: YOUR_CI_USER_SPACE         #<----- REPLACE ME
+    organization: schakraborty-pal    #<---- REPLACE ME
+    space: sandbox         #<---- REPLACE ME
     skip_cert_check: true
 
 jobs:
-- name: build
+- name: test
   public: true
   plan:
-  - get: attendee-service
+  - get: attendee-service-source
+    trigger: true
+  - task: test
+    file: attendee-service-source/ci/tasks/test.yml
+
+- name: deploy
+  public: true
+  plan:
+  - get: attendee-service-source
+    trigger: true
+    passed: [test]
   - task: package
-    file: attendee-service/ci/tasks/package.yml
+    file: attendee-service-source/ci/tasks/package.yml
   - put: deploy-attendee-service
     params:
       manifest: attendee-service/manifest.yml
       path: package-output/attendee-service.jar
 
+- name: smoke_test
+  public: true
+  plan:
+  - get: attendee-service-source
+    trigger: true
+    passed: [deploy]
+  - task: smoke_test
+    file: attendee-service-source/ci/tasks/smoke-test.yml
+    params:
+      ATTENDEE_SERVICE_URL: https://attendee-service-houndy-ladyhood.apps.cumuluslabs.io  #<---- REPLACE ME
